Fix todoitem align and margin

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -2,7 +2,6 @@
 @import "../../stylesheets/_responsive.scss";
 .App {
   height: 100%;
-  text-align: center;
   // &-logo {
   //   animation: App-logo-spin infinite 20s linear;
   //   height: 80px;
