--- a/client/src/features/todo/components/TodoItem/TodoItem.scss
+++ b/client/src/features/todo/components/TodoItem/TodoItem.scss
@@ -25,7 +25,6 @@
     white-space: pre-line;
     word-break: break-all;
     padding: 15px;
-    margin-left: 45px;
     display: block;
     line-height: 1.2;
     transition: color 0.4s;
